🐛  Fix a css overlapping bug

--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -33,7 +33,7 @@
 }
 
 .inputBar {
-  width: 100%;
+  width: 80%;
   padding-left: 1rem;
   padding-right: 1rem;
 }
